--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-    <title>EducaciÛn y ¡reas Verdes</title>
+    <title>Educaci√≥n y √Åreas Verdes</title>
+    <meta http-equiv=‚ÄùContent-Type‚Äù content=‚Äùtext/html; charset=UTF-8‚Ä≥ />
     <link href="estilo.css" rel="stylesheet">
     <script src="jquery.js" type="text/javascript"></script>
 </head>
@@ -20,21 +21,21 @@
 
     <nav>
         <ul class="menu">
-            <li><a href="#resumen">PresentaciÛn de la AplicaciÛn</a></li>
+            <li><a href="#resumen">Presentaci√≥n de la Aplicaci√≥n</a></li>
             <li><a href="#ejemplos">Ejemplos de uso</a></li>
             <li><a href="#contacto">Formulario de contacto</a></li>
         </ul>
     </nav>
 
     <aside>
-        <h1>Men˙</h1>
+        <h1>Men√∫</h1>
         <ul>
-            <li>Inicio y AutenticaciÛn</li>
-            <li>¡rea Apoderados</li>
-            <li>¡rea docente</li>
-            <li>¡rea convenios</li>
+            <li>Inicio y Autenticaci√≥n</li>
+            <li>√Årea Apoderados</li>
+            <li>√Årea docente</li>
+            <li>√Årea convenios</li>
             <ul>
-		<li><a href="https://www.mineduc.cl/">Ministerio de EducaciÛn</a>
+		<li><a href="https://www.mineduc.cl/">Ministerio de Educaci√≥n</a>
 		<li><a href="https://www.unicef.org/es">UNICEF</a>
 		<li><a href="http://www.meteochile.gob.cl/PortalDMC-web/index.xhtml">Pronostico del clima</a>
             </ul>
@@ -43,40 +44,40 @@
 
     <section>
 	<a name="resumen"><h3>Necesidad a satisfacer</h3></a>
-        <p>NiÒos y jÛvenes se han visto afectados  en su proceso educativo debido a la pandemia; las actividades fÌsicas que regularmente los ayudaba a sentirse m·s activos est·n limitadas.</p>
-        <p>Por lo menos 1 de cada 7 niÒos y adolescentes han estado confinados en el hogar el ˙ltimo aÒo, lo que supone un riesgo para su salud mental y bienestar (Dato extraÌdo de UNICEF)</p>
-		<p>Existe limitaciÛn en los aforos y en las distancias de desplazamiento por ello el uso de los medios de comunicaciÛn digital para poner en contacto profesores y estudiantes se ha vuelto fundamental.</p>
-		<p>Los alumnos con clases online, no est·n aprendiendo de manera adecuada, ya sea por la infraestructura de los colegios o las limitaciones en el hogar para el acceso a Internet.</p>
+        <p>Ni√±os y j√≥venes se han visto afectados  en su proceso educativo debido a la pandemia; las actividades f√≠sicas que regularmente los ayudaba a sentirse m√°s activos est√°n limitadas.</p>
+        <p>Por lo menos 1 de cada 7 ni√±os y adolescentes han estado confinados en el hogar el √∫ltimo a√±o, lo que supone un riesgo para su salud mental y bienestar (Dato extra√≠do de UNICEF)</p>
+		<p>Existe limitaci√≥n en los aforos y en las distancias de desplazamiento por ello el uso de los medios de comunicaci√≥n digital para poner en contacto profesores y estudiantes se ha vuelto fundamental.</p>
+		<p>Los alumnos con clases online, no est√°n aprendiendo de manera adecuada, ya sea por la infraestructura de los colegios o las limitaciones en el hogar para el acceso a Internet.</p>
     </section>
     <section>
-	<h3>PresentaciÛn del producto que resuelve la necesidad</h3>
-        <p>Sistema que permite el contacto entre usuarios (niÒos y adolescentes) que demandan clases y actividades deportivas y recreativas con profesores que est·n disponibles para actuar como monitores de estas actividades. Dentro de una zona geogr·fica definida y con la limitaciÛn de aforos.</p>
-        <p>Sistema de asignaciÛn de cupos y elecciÛn de usuarios para ocupar estos cupos seg˙n orden de llegada y con las limitaciones de aforo.</p>
+	<h3>Presentaci√≥n del producto que resuelve la necesidad</h3>
+        <p>Sistema que permite el contacto entre usuarios (ni√±os y adolescentes) que demandan clases y actividades deportivas y recreativas con profesores que est√°n disponibles para actuar como monitores de estas actividades. Dentro de una zona geogr√°fica definida y con la limitaci√≥n de aforos.</p>
+        <p>Sistema de asignaci√≥n de cupos y elecci√≥n de usuarios para ocupar estos cupos seg√∫n orden de llegada y con las limitaciones de aforo.</p>
     </section>
     <section>
-	<h3>Nombre de la aplicaciÛn:</h3>
+	<h3>Nombre de la aplicaci√≥n:</h3>
         <p>Plataforma para reforzamiento al aire libre.(ECOEDU).</p>
     </section>
     <section>
 	<h3>Objetivos:</h3>
-        <p>Apoyar a profesionales que se encuentren cesantes producto de la pandemia, ofreciendo sus servicios de clases a grupos de niÒos de edades similares.</p>
-        <p>Incentivar a los niÒos a trabajar al aire libre, brind·ndoles un espacio recreativo donde poder trabajar.</p>
-        <p>Apoyar a los padres y apoderados con sus hijos en el sentido acadÈmico, al poder elegir las materias para reforzar.</p>
-        <p>Con Geo referencia saber donde est·n nuestros hijos al momento de las clases.</p>
-		<p>Promover el desarrollo educativo y deportivo en jÛvenes y niÒos.</p>
-		<p>Aprovechamiento de plazas o parques p˙blicos comunales para estos eventos.</p>
+        <p>Apoyar a profesionales que se encuentren cesantes producto de la pandemia, ofreciendo sus servicios de clases a grupos de ni√±os de edades similares.</p>
+        <p>Incentivar a los ni√±os a trabajar al aire libre, brind√°ndoles un espacio recreativo donde poder trabajar.</p>
+        <p>Apoyar a los padres y apoderados con sus hijos en el sentido acad√©mico, al poder elegir las materias para reforzar.</p>
+        <p>Con Geo referencia saber donde est√°n nuestros hijos al momento de las clases.</p>
+		<p>Promover el desarrollo educativo y deportivo en j√≥venes y ni√±os.</p>
+		<p>Aprovechamiento de plazas o parques p√∫blicos comunales para estos eventos.</p>
     </section>
 	<section>
-	<h3>MetodologÌa:</h3>
-        <p>InvestigaciÛn del posible segmento del mercado, cuales son los problemas o necesidades que podrÌa satisfacer la aplicaciÛn que se proyecta desarrollar, existe en el mercado alg˙n producto similar.</p>
-        <p>Potenciales usuarios o clientes, nuestro Bayer Persona, cu·les son sus intereses y como mejorar su vida nuestro producto.</p>
-        <p>Producto mÌnimo viable o PMV, usando la aplicaciÛn Balsamiq se construye un wireframe que mediante testeo se ir· mejorando hasta lograr un producto estable.</p>
+	<h3>Metodolog√≠a:</h3>
+        <p>Investigaci√≥n del posible segmento del mercado, cuales son los problemas o necesidades que podr√≠a satisfacer la aplicaci√≥n que se proyecta desarrollar, existe en el mercado alg√∫n producto similar.</p>
+        <p>Potenciales usuarios o clientes, nuestro Bayer Persona, cu√°les son sus intereses y como mejorar su vida nuestro producto.</p>
+        <p>Producto m√≠nimo viable o PMV, usando la aplicaci√≥n Balsamiq se construye un wireframe que mediante testeo se ir√° mejorando hasta lograr un producto estable.</p>
         <p>Prototipo funcional a partir del wireframe para ser presentado a los primeros clientes para conocer su experiencia.</p>
-		<p>Testeo del prototipo y por realimentaciÛn validar hasta lograr un primer producto completo.</p>
+		<p>Testeo del prototipo y por realimentaci√≥n validar hasta lograr un primer producto completo.</p>
     </section>
             <article class="dibujos">
             <header>
-                <a name="ejemplos"><h1>Pizarra dinamica de programaciÛn de clases</h1></a>
+                <a name="ejemplos"><h1>Pizarra dinamica de programaci√≥n de clases</h1></a>
             </header>
             <section>
                 <canvas id="hoja" width="480" height="320">Este navegador no puede mostrar un lienzo de dibujo</canvas>
