--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Educación y Áreas Verdes</title>
-    <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
+    <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
     <link href="estilo.css" rel="stylesheet">
     <script src="jquery.js" type="text/javascript"></script>
 </head>
